<resources>
    <string name="app_name">Medicine clock</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="add_medicine">Add medicine</string>
    <string name="name">Name</string>
    <string name="start_time">Start time</string>
    <string name="delay">Delay</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="use_now">Use now</string>
    <string name="count">Count</string>
    <string name="empty_name">Empty name</string>
    <string name="zero_delay">Zero delay</string>
    <string name="zero_count">Zero count</string>
</resources>
